# RuMorph

./: .gitignore  .gitmodules  Cargo.toml  README.md  buggy_sorted_crate.txt  collect_stars.py  count_line.py  crates_list.txt  crates_listII.txt  final.txt  final_crate_list.txt  install.sh  ls_buggy_crate_w_stars.py  report.txt  reportII.txt  reportIII.txt  rumorph.py  setup_rumorph_home.py  star_crate_list.csv  star_sorted.py  star_sorted_crate.txt  star_sorted_crateII.txt  statistics.py  test_for_bug.py  test_time.py  test_time_overhead.py  whole_crates_list.txt
crawler/: Cargo.toml  README.md  cargo_downloader.sh  crates_downloader.py  crates_list.txt  crates_listII.txt  lint_runner.py  transmute_patterns.py  transmute_patterns.txt  transmute_statistics.csv  transmute_statistics.txt  transmute_stats.csv  transmute_stats.txt  ts_states.csv
crawler/analyzer/: lint_runner.py  patterns.py  patterns.txt
crawler/casting/: casting_patterns.py  casting_patterns.txt  lint_runner.py
crawler/src/: main.rs
crawler/transmute/: fail_log_linter.sh  lint_runner.py  transmute_patterns.py  transmute_patterns.txt  transmute_statistics.txt
src/: analysis.rs  context.rs  graph.rs  ir.rs  iter.rs  lib.rs  log.rs  paths.rs  prelude.rs  report.rs  utils.rs  visitor.rs
src/analysis/: broken_bitpatterns.rs  broken_layout.rs  err_handling.rs  overflow.rs  truncation.rs  uninit_exposure.rs  unsafe_dataflow.rs
tests/bl1/: clippy_report.txt  report.txt
tests/bl2/: report.txt
tests/error-handling/: report.txt
trophy-case/: README.md  UE-report-template.md
(+13 files in other folders)
